Added(web_app):Реализован функционал, связанный с созданием/редактированием/удалением записей в таблицах

--- a/StudentPerformance/templates/create_subject.html
+++ b/StudentPerformance/templates/create_subject.html
@@ -2,16 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Create Subject</title>
+    <style>
+
+        .form-container {
+            border: 1px solid #ccc;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
+            width: 500px;
+            margin: 0 auto;
+        }
+
+
+        .center {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+        }
+
+    </style>
 </head>
 <body>
-
-<h1>Create Subject</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Create</button>
-</form>
+<h1 style="text-align: center; margin-top: 300px">Create Subject</h1>
+<div class="center">
+    <div class="form-container">
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Create</button>
+        </form>
+    </div>
+</div>
 
 </body>
 </html>
