--- a/StudentPerformance/templates/index.html
+++ b/StudentPerformance/templates/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Student Performance.com</title>
+     <style>
+    body {
+        background-image: url("{% static 'student3.jpg' %}");
+        background-size: cover;
+        background-position: center;
+        }
+    </style>
+
 </head>
 <body>
 
 <!-- название проекта -->
-<h1>StudentsPerformance</h1>
+<h1 style="text-align: center;">Student Performance</h1>
+
 
 <!-- таблица студентов -->
-<table border="1" cellpadding="5" cellspacing="0" align="left">
+<table style="padding: 8px; text-align: left; vertical-align: middle; box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);" border="1" cellpadding="5" cellspacing="0" align="left">
+    <tr style="background-color: #f5f5f5;">
+</tr>
     <tr>
         <th colspan="4">Students <a href="{% url 'create_student' %}">(Create Students)</a></th>
     </tr>
@@ -34,7 +46,7 @@
 </table>
 
 <!-- таблица предметов -->
-<table border="1" cellpadding="5" cellspacing="0" align="left" style="margin-left: 40px;">
+<table border="1" cellpadding="5" cellspacing="0" align="left" style="padding: 8px; text-align: left; vertical-align: middle; box-shadow: 0 0 10px rgba(0, 0, 0, 0.9); margin-left: 20px;">
     <tr>
         <th colspan="4">Subjects <a href="{% url 'create_subject' %}">(Create Subjects)</a></th>
     </tr>
@@ -58,7 +70,7 @@
 </table>
 
 <!-- таблица оценок -->
-<table border="1" cellpadding="5" cellspacing="0" align="left" style="margin-left: 40px;">
+<table border="1" cellpadding="5" cellspacing="0" align="left" style="padding: 8px; text-align: left; vertical-align: middle; box-shadow: 0 0 10px rgba(0, 0, 0, 0.9); margin-left: 20px;">
     <tr>
         <th colspan="4">Grades <a href="{% url 'create_grade' %}">(Create Grade)</a></th>
     </tr>
@@ -82,7 +94,7 @@
 </table>
 
 <!-- таблица лучший студент -->
-<table border="1" cellpadding="5" cellspacing="0" align="right" style="margin-right: 100px;">
+<table border="1" cellpadding="5" cellspacing="0" align="right" style="padding: 8px; text-align: left; vertical-align: middle; box-shadow: 0 0 10px rgba(0, 0, 0, 0.9); margin-right: 0px;">
      <tr>
         <th colspan="4">Best Student</th>
     </tr>
@@ -99,7 +111,7 @@
 </table>
 
 <!-- таблица худший студент -->
-<table border="1" cellpadding="5" cellspacing="0" align="right" style="margin: 40px 100px 0px 0px;">
+<table border="1" cellpadding="5" cellspacing="0" align="right" style="padding: 8px; text-align: left; vertical-align: middle; box-shadow: 0 0 10px rgba(0, 0, 0, 0.9); margin: 40px 0px 0px 0px;">
      <tr>
         <th colspan="4">Worst Student</th>
     </tr>
@@ -116,7 +128,7 @@
 </table>
 
 <!-- средние баллы по дисциплине -->
-<table border="1" cellpadding="5" cellspacing="0" align="right" style="margin: 40px 100px 0px 0px;">
+<table border="1" cellpadding="5" cellspacing="0" align="right" style="padding: 8px; text-align: left; vertical-align: middle; box-shadow: 0 0 10px rgba(0, 0, 0, 0.9); margin: 40px 0px 0px 0px;">
     <tr>
         <th colspan="4">Subject Average</th>
     </tr>
@@ -135,7 +147,7 @@
 </table>
 
 <!-- средние баллы студента -->
-<table border="1" cellpadding="5" cellspacing="0" align="right" style="margin: 240px -380px 0px 0px;">
+<table border="1" cellpadding="5" cellspacing="0" align="right" style="padding: 8px; text-align: left; vertical-align: middle; box-shadow: 0 0 10px rgba(0, 0, 0, 0.9); margin: 240px -390px 0px 0px;">
      <tr>
         <th colspan="4">Student Average</th>
     </tr>
