--- a/StudentPerformance/templates/subject_avg_grades.html
+++ b/StudentPerformance/templates/subject_avg_grades.html
@@ -2,11 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Average Grades by Subject</title>
+    <style>
+
+        .center {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+        }
+
+    </style>
 </head>
 <body>
-<h1>Average Grades by Subject</h1>
-<table border="1" cellpadding="5" cellspacing="0">
+<h1 style="text-align: center; margin-top: 300px">Average Grades by Subject</h1>
+<table style="padding: 8px; text-align: left; vertical-align: middle; box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);" border="1" cellpadding="5" cellspacing="0" align="center">
     <tr>
         <th>Subject</th>
         <th>Teacher</th>
